@startuml

entity podcasts {
    * id : SERIAL <<PK>>
    --
    * url : TEXT
    * title : TEXT
    description : TEXT
    image_url : TEXT
    subscribed_at : TIMESTAMP
}

entity episodes {
    * id : SERIAL <<PK>>
    --
    * podcast_id : INTEGER <<FK>>
    * url : TEXT
    title : TEXT
    description : TEXT
    image_url : TEXT
    summary : TEXT
    transcript : TEXT
    audio_path : TEXT
    duration_seconds : INTEGER
    chunks : JSONB
    chunk_embeddings : BYTEA
    analysis_duration_seconds : INTEGER
    * status : TEXT {available, analyzing, ready}
}

entity episode_segments {
    * id : SERIAL <<PK>>
    --
    * episode_id : INTEGER <<FK>>
    * segment_order : INTEGER
    start_time : INTEGER
    transcript : TEXT
    topic : TEXT
    summary : TEXT
}

entity episode_chat {
    * id : SERIAL <<PK>>
    --
    * episode_id : INTEGER <<FK>>
    * source : TEXT {user, assistant}
    * message : TEXT
    created_at : TIMESTAMP
}

podcasts ||--o{ episodes
episodes ||--o{ episode_segments
episodes ||--o{ episode_chat

@enduml
